<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="splash_text">BAMBOO QUIZ</string>
    <string name="questionFixedText">"What is the meaning of this word: "</string>
    <string name="placeholder_word">Placeholder word</string>
    <string name="placeholder_1">Placeholder 1</string>
    <string name="placeholder_2">Placeholder 2</string>
    <string name="placeholder_3">Placeholder 3</string>
    <string name="placeholder_4">Placeholder 4</string>
    <string name="choose_your_language">Choose your language:</string>
    <string name="flag_china">flag_china</string>
    <string name="chinese">Chinese</string>
    <string name="choose_your_game">Choose your game:</string>
    <string name="english_to_chosen_language">English to chosen language</string>
    <string name="chosen_language_to_english">Chosen language to english</string>
    <string name="writing_game">Writing game</string>
    <string name="linking_game">Linking game</string>
    <string name="choose_the_words_you_want_to_play_with">Choose the words you want to play with:</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="choose_a_username">Choose a username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="loading">Loading…</string>
    <string name="enter">Enter</string>
    <string name="continueText">Continue</string>
    <string name="image_recognition">Image recognition</string>
    <string name="words_list">Words list</string>
    <string name="search">Search…</string>
    <string name="correct_answer">Correct: %1$d</string>
    <string name="wrong_answer">Wrong: %1$d</string>
    <string name="last_seen_word">Last seen: %1$d</string>
    <string name="clear">Clear</string>
    <string name="undo">Undo</string>
    <string name="select_file">Select file</string>
    <string name="send">Send</string>
    <string name="result">Result</string>
    <string name="loaded_image">Loaded image</string>
    <string name="reset">Reset</string>
    <string name="profile_image">profile image</string>
    <string name="username">Username</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="repeat_words">Repeat words</string>
    <string name="placeholder">Placeholder</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="modify_profile">Modify profile</string>
    <string name="flag">flag</string>
    <string name="game">Game</string>
    <string name="word">Word</string>
    <string name="profile">Profile</string>
    <string name="quiz">Quiz: %1$s</string>
    <string name="correct">Correct: %1$.1f%%</string>
    <string name="Homepage">홈페이지の熊猫</string>
    <string name="welcome">Hello, why don\'t you play a game?</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="synchronization">Synchronization</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="results">Results</string>
    <string name="waiting">Waiting...</string>
</resources>