<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/results"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/total_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/correct_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/incorrect_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textSize="25sp" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continueText"
        />


</LinearLayout>