<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- RESULT dell'inferenza -->
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/result"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <!-- 2) AREA DISEGNO -->
    <com.zyuniversita.ui.customviews.DrawingView
        android:id="@+id/drawingView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 3) AREA IMMAGINE (di default invisibile in quanto l'utnete non ha ancora scelto cosa fare se disegnare, scattare o galleria)  -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:visibility="gone"
        android:contentDescription="@string/loaded_image"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="@id/drawingView"
        app:layout_constraintStart_toStartOf="@id/drawingView"
        app:layout_constraintEnd_toEndOf="@id/drawingView"/>

    <!-- 4) CLEAR / UNDO  -->
    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/drawingView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/undo"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undo"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/drawingView"
        app:layout_constraintStart_toEndOf="@id/clear"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 5) SELECT FILE- -->
    <Button
        android:id="@+id/select_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_file"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 6) GROUP per nascondere/mostrare la modalità disegno in un colpo solo  -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/drawGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="drawingView,clear,undo,select_file"/>

    <!-- 7) BARRIER: crea un oggetto invisibile che si posiziona sotto a drawgin view, imagreiew o select file, usato come riferiemtno di posizionamenot per gli elementi inferiori - -->
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/workAreaBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:barrierAllowsGoneWidgets="false"
        app:constraint_referenced_ids="drawingView,imageView,select_file"/>

    <!-- 8) SEND e RESET - -->
    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/workAreaBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:visibility="gone"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/send"
        app:layout_constraintBottom_toBottomOf="@id/send"
        app:layout_constraintStart_toEndOf="@id/send"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>