<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- 1. Foto profilo -->
    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="#ccaacc"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        android:src="@drawable/eng_ch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 2. Username -->
    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/username"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/image_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 3a. Quiz completati -->
    <TextView
        android:id="@+id/completedQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toStartOf="@id/percentageCorrect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_username" />

    <!-- 3b. Percentuale corrette -->
    <TextView
        android:id="@+id/percentageCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/placeholder"
        app:layout_constraintTop_toTopOf="@id/completedQuiz"
        app:layout_constraintStart_toEndOf="@id/completedQuiz"
        app:layout_constraintEnd_toEndOf="parent"/>
    <!-- 4. Bottone modifica profilo -->
    <Button
        android:id="@+id/button_edit_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#ff0000"
        android:text="@string/modify_profile"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/completedQuiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 5. RecyclerView lingue -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_languages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/button_edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>